--- a/gitback-frontend/src/app/globals.css
+++ b/gitback-frontend/src/app/globals.css
@@ -20,7 +20,82 @@
 }
 
 body {
-  background: var(--background);
+  background: FFFFFF;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.settingsBox{
+  border-radius: 25px;
+  background: #2EC4B6;
+  width: 400px;
+  height: 100px;
+  color: black;
+  font-size: 70px;
+  text-align: center;
+}
+
+.changeUsername {
+  border-radius: 50px;
+  background: #CBF3F0;
+  width: 600px;
+  height: 100px;
+  color: black;
+  font-size: 50px;
+  padding: 10px;
+  text-align: center;
+}
+
+.changeUsername:hover{
+  background-color: gray;
+  transition: 0.3s;
+  font-size: 60px;
+  color: white;
+}
+
+.logOut {
+  border-radius: 50px;
+  background: #CBF3F0;
+  width: 300px;
+  height: 100px;
+  color: black;
+  font-size: 50px;
+  padding: 10px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.logOut:hover{
+  background-color: gray;
+  transition: 0.3s;
+  font-size: 60px;
+  color: white;
+}
+
+.deleteAccount {
+  border-radius: 50px;
+  background: #CBF3F0;
+  width: 500px;
+  height: 100px;
+  color: black;
+  font-size: 50px;
+  padding: 10px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.deleteAccount:hover{
+  background-color: gray;
+  transition: 0.3s;
+  font-size: 60px;
+  color: white;
+}
+
+.settingsContainer {
+  place-items: center;
+
 }
