Did some things

--- a/gitback-frontend/src/app/globals.css
+++ b/gitback-frontend/src/app/globals.css
@@ -104,3 +104,15 @@ body {
   color: black;
   font-size: 10px;
 }
+
+.home {
+  @apply flex w-full flex-row max-xl:max-h-screen max-xl:overflow-y-scroll;
+}
+
+.home-content {
+  @apply flex w-full flex-1 flex-col gap-8 px-2 sm:px-8 py-7 lg:py-12 xl:max-h-screen xl:overflow-y-scroll;
+}
+
+.home-header {
+  @apply flex flex-col justify-between gap-8;
+}
