--- a/gitback-frontend/src/app/globals.css
+++ b/gitback-frontend/src/app/globals.css
@@ -19,8 +19,51 @@
   }
 }
 
+.createAccount {
+  text-align: center;
+}
+
+.createAccountTextField {
+  justify-self: center;
+  align-self: center;
+  width: 100%;
+}
+
+.createAccountButton {
+  width: 100%;
+}
+
+.createAccountModalBackground {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .3);
+  position: absolute;
+  align-content: center;
+  justify-content: center;
+}
+
+.accountCreateModal {
+  background-color: white;
+  width: 20rem;
+  height: 30rem;
+  border-radius: 1rem;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  gap: 2rem;
+}
+
+.createAccountForm {
+  gap: 2rem;
+}
+
+.createAccountClose {
+  float: right;
+  margin: 0.5rem;
+}
+
 body {
-  background: FFFFFF;
+  background: #FFFFFF;
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
